<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/panelBackground"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

        <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/notificationCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/notificationTextView"
                app:layout_constraintRight_toRightOf="@id/notificationTextView"
                app:layout_constraintBottom_toTopOf="@id/notificationTextView"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="1"
                android:checked="true"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/notificationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_notification"
                android:textSize="@dimen/small_text_size"
                android:textColor="#000"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notificationCheckBox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="1"
                android:layout_marginBottom="8dp"
                />

        <androidx.cardview.widget.CardView
                android:id="@+id/addressCardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/notificationTextView"
                app:layout_constraintEnd_toStartOf="@id/actionButton"
                app:cardBackgroundColor="#efefef"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                android:layout_margin="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    >

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/addressEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:maxLines="1"
                        android:hint="@string/address_hint"
                        android:text="@string/default_websocket_server"
                        android:background="@null"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="8dp"
                android:text="@string/connect"
                android:clickable="true"
                android:focusable="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/topPanel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottomPanel"
            android:background="#EFEFEF"
            />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/panelBackground"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

        <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/hexCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/hexTextView"
                app:layout_constraintRight_toRightOf="@id/hexTextView"
                app:layout_constraintBottom_toTopOf="@id/hexTextView"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="1"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hexTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex"
                android:textSize="@dimen/small_text_size"
                android:textColor="#000"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hexCheckBox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="1"
                android:layout_marginBottom="8dp"
                />

        <androidx.cardview.widget.CardView
                android:id="@+id/inputCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/hexTextView"
                app:layout_constraintEnd_toStartOf="@id/sendButton"
                app:cardBackgroundColor="#efefef"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                android:layout_margin="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    >

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:hint="@string/send_input_hint"
                        android:background="@null"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="8dp"
                android:text="@string/send"
                android:clickable="true"
                android:focusable="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>